# sniffi

./: README.md
docs/: battery_api.md
install/: local_setup.sh  setup.sh
install/lidar_gui/share/lidar_gui/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/motor_driver/share/motor_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/sniffi_bringup/share/sniffi_bringup/: package.sh  (+9 more)
install/sniffi_safety/share/sniffi_safety/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sniffi_safety/share/sniffi_safety/cmake/: sniffi_safetyConfig.cmake
log/: latest_build  latest_list
ref-src/src/: ros2_structure.txt
ref-src/src/lidar_gui/: package.xml  setup.py
ref-src/src/motor_driver/: package.xml  setup.py
src/lidar_gui/: CMakeLists.txt  package.xml
src/motor_driver/: CMakeLists.txt
src/sniffi_bringup/: CMakeLists.txt
src/sniffi_bringup/launch/: power_safety.launch.py
src/sniffi_description/: CMakeLists.txt
src/sniffi_msgs/: CMakeLists.txt  package.xml
src/sniffi_msgs/msg/: BatteryStatus.msg  PowerFlags.msg
src/sniffi_power/: CMakeLists.txt
src/sniffi_power/src/: power_node.cpp
src/sniffi_safety/: CMakeLists.txt  package.xml
src/sniffi_safety/src/: safety_node.cpp
src/sniffi_sim/: CMakeLists.txt
src/sniffi_sim/config/: nav2_params.yaml  rtabmap_params.yaml
src/sniffi_sim/launch/: sim_nav_demo.launch.py
src/sniffi_sim/rviz/: nav_demo.rviz
src/sniffi_sim/worlds/: sniffi.world
(+79 files in other folders)
