<package format="3">
  <name>sniffi_safety</name>
  <version>0.0.1</version>
  <description>Emergency stop + watchdog + cmd_vel gate</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
